<resources>
    <string name="app_name">Delock</string>
    <string name="title_home">Browse</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_Item">Item</string>
    <string name="ethereum_ethereum_not_installed">You  need to install Ethereum Android first</string>
    <string name="balance">Balance</string>
    <string name="prompt_address">Account address</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_settings">Settings</string>

    <!--DEMO STRINGS - Remove these before commit -->
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">Delock</string>
    <string name="backdrop_subtitle">A p2p rental system</string>
    <!--///////////////////-->
    <string name="dummy_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of
        type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here,
        making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text,
        and a search for lorem ipsum will uncover many web sites still in their infancy.
        Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="item_image">Item Image</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_my_notifications">Notifications</string>
    <string name="title_activity_unlock">Unlock</string>
    <string name="background">background</string>
    <string name="delock_logo">delock_logo</string>
    <string name="confirm">Confirm Address</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="address">Address</string>
    <string name="tap_for_details">Tap for details</string>
    <string name="change_identity">Change Identity</string>
    <string name="ether_currency_symbol">Ether Currency Symbol</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_delock">About Delock</string>
    <string name="add_item">Add new item</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_account_details">AccountDetailsActivity</string>
    <string name="generate_new_address">Generate New Address</string>
    <string name="import_existing">Import Existing</string>
    <string name="generate_wallet">Generate Wallet</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="note_we_recommend_writing_down_your_password_on_paper_and_keeping_it_somewhere_safe_as_it_is_the_only_means_of_accessing_your_account">Note: We recommend writing down your password on paper and keeping it somewhere safe as it is the only means of accessing your account</string>
    <string name="title">Title</string>
    <string name="euro_sign_symbol">Euro sign</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter email addres...</string>
    <string name="Phone">Phone</string>
    <string name="PersonalInfo">Personal Info</string>
    <string name="Location">Location</string>
    <string name="Address">Address</string>
    <string name="ZipCode">ZipCode</string>
    <string name="ItemDetails">Item Details</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="DateTime">Date/Time</string>
    <string name="Schedule">Schedule</string>
    <string name="Description">Description</string>
    <string name="Title">Title</string>
    <string name="Deposit">Deposit</string>
    <string name="Price">Price</string>
    <string name="EnterDescription">Enter description...</string>
    <string name="EnterTitle">Enter title...</string>
    <string name="title_activity_lock_and_publish">LockAndPublishActivity</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="NFC_hint">Please hold your device to the lock.</string>
    <string name="title_activity_lock_new_item">LockNewItemActivity</string>
    <string name="lock_and_publish_listing">Lock and Publish New Listing</string>
</resources>
