<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_identity"
            android:title="@string/change_identity"/>
        <item
            android:id="@+id/nav_add_item"
            android:title="@string/add_item"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings"/>
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/about_delock"/>
            <item
                android:id="@+id/nav_send"
                android:title="@string/contact_us"/>
        </menu>
    </item>

</menu>